--- a/blog/templates/ps_reset/password_reset_confirm.html
+++ b/blog/templates/ps_reset/password_reset_confirm.html
@@ -11,7 +11,7 @@
   {% if validlink %}  
   
   <main class="max-w-md mx-auto mt-10 p-6 bg-white dark:bg-[#F6F2E6] rounded-lg shadow-md">
-    <h1 class="text-2xl font-bold mb-4 text-center text-gray-900 dark:text-black">
+    <h1 class="text-2xl font-libertinus-bold mb-4 text-center text-gray-900 dark:text-black">
     Ingrese su nueva contraseña
   </h1>
     <form method="post" class="space-y-4">
