--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -15,7 +15,7 @@
             <div class="relative z-10 h-full flex flex-col justify-start items-center text-start pt-9">
                 <h1 class="text-7xl font-tangerine text-shadow-lg/40 text-white mt-10">Si no has encontrado tu Ikigai, su búsqueda ya constituye un propósito en sí mismo.</h1>
                 <div class="flex mt-auto mb-8 gap-7 space-x-10">
-                    <a href="" class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-[#203329] hover:text-amber-50 transition duration-300" >Ùltimos posts </a>
+                    <a href="{% url 'post:post_list'%}" class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-[#203329] hover:text-amber-50 transition duration-300" >Ùltimos posts </a>
                     <a href="" class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-[#203329] hover:text-amber-50 transition duration-300">Categorías </a>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                         {% else %}
                             <!-- Placeholder si no hay imagen -->
                             <div class="h-48 w-full bg-[#203329] flex items-center justify-center">
-                                <span class="text-white text-xl font-bold px-4 text-center">{{ post.title }}</span>
+                                <span class="text-white text-xl font-libertinus-bold px-4 text-center">{{ post.title }}</span>
                             </div>
                         {% endif %}
                     {% endwith %}
@@ -47,16 +47,16 @@
                 <!-- Contenido de la tarjeta -->
                 <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                     <div class="flex-1">
-                        <h3 class="mt-2 text-xl font-semibold text-gray-900">
+                        <h3 class="mt-2 text-xl font-libertinus-italic text-[#203329]">
                             {{ post.title }}
                         </h3>
-                        <p class="mt-3 text-base text-gray-500">
+                        <p class="mt-3 text-base font-libertinus-regular text-gray-500">
                             <!-- Muestra un extracto del contenido (ej: 25 palabras) -->
                             {{ post.content|truncatewords:25|linebreaksbr }}
                         </p>
                     </div>
                     <div class="mt-6">
-                        <a href="{% url 'post:post_detail' post.slug %}" class="text-lg font-spectral font-semibold text-green-700 hover:text-green-600">
+                        <a href="{% url 'post:post_detail' post.slug %}" class="text-lg font-libertinus-bold text-[#445e35] hover:text-xl hover:text-[#203329]">
                             Leer más &rarr;
                         </a>
                     </div>
