--- a/blog/templates/user/user_profile.html
+++ b/blog/templates/user/user_profile.html
@@ -15,7 +15,7 @@ Perfil de {{ user.username }}
 
 <div class="min-h-screen bg-[#F6F2E6] text-[#3F4F36] flex justify-center items-start gap-10 py-12 px-12">
 
-  <div class="bg-white rounded-lg shadow-md w-1/2 p-6 space-y-6">
+  <div class="bg-white rounded-lg shadow-md w-1/3 p-6 space-y-6">
 
     <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">
       Perfil de Usuario
@@ -53,12 +53,12 @@ Perfil de {{ user.username }}
     </div>
 </div>
 
-<div class="bg-white rounded-lg shadow-md w-1/2 p-6 space-y-6">
+<div class="bg-white rounded-lg shadow-md w-2/3 p-6 space-y-6">
       
  <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">Mis Posts</h2>
 
     {% if posts %}
-        <ul class="list-disc list-inside space-y-2 max-h-60 overflow-y-auto">
+        <ul class="list-disc list-inside space-y-8 max-h-60 overflow-y-auto">
           {% for post in posts %}
             <li>
               <a href="{% url 'post:post_detail' post.slug %}" class="text-[#3F4F36] hover:underline">
@@ -66,16 +66,19 @@ Perfil de {{ user.username }}
               </a>
               <span class="text-sm text-gray-500">- {{ post.created_at|date:"d M Y" }}</span>
             </li>
-          {% endfor %}
         </ul>
-      {% else %}
-        <p>No has creado ningún post aún.</p>
-      {% endif %}
-    </div>
-
+        <div>
+         <p class="text-[#445e35] mb-4 line-clamp-3"> {{ post.content|truncatewords:30 }}</p>
+        </div>
+         <a href="{% url 'post:post_detail' post.slug %}" class="hover:text-[#203329] transition-colors"> Leer más →</a>
+          {% endfor %}
+    {% else %}
+         <p>No has creado ningún post aún.</p>
+    {% endif %}
 </div>
-
-
-
-
 {% endblock content %}
+
+
+    
+
+   
