Eliminar comentario innecesario en post_detail.html

--- a/blog/templates/post/post_detail.html
+++ b/blog/templates/post/post_detail.html
@@ -20,7 +20,7 @@
             class="w-full h-auto object-cover rounded-lg shadow-lg mb-8"
         >
     {% endif %}
-
+<!-- sdsdad -->
     <!-- 🔹 Imágenes adicionales de PostImage -->
     {% if object.images.exists %}
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
