--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -11,7 +11,7 @@
 <main class="mb-20">
     <!-- Sección de portada -->
     <section class="relative h-[70vh] bg-cover bg-center text-white" style="background-image:url('{% static 'assets/images/portada1.webp' %}');">
-        <div class="relative z-10 h-full flex flex-col justify-start items-center text-start pt-9 px-4 text-center">
+        <div class="relative z-10 h-full flex flex-col justify-start items-center text-center pt-9 px-4">
             <h1 class="text-5xl md:text-7xl font-tangerine text-shadow-lg/40 text-white mt-10 max-w-5xl">
                 Si no has encontrado tu Ikigai, su búsqueda ya constituye un propósito en sí mismo.
             </h1>
@@ -20,7 +20,7 @@
                    class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-[#203329] hover:text-amber-50 transition duration-300">
                    Últimos posts
                 </a>
-                <a href="{% url 'post:category_create' %}" 
+                <a href=# 
                    class="border-2 border-white rounded-full bg-[#F6F2E6] text-[#203329] font-spectral font-bold py-3 px-6 hover:bg-[#203329] hover:text-amber-50 transition duration-300">
                    Categorías
                 </a>
@@ -32,7 +32,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="m-8 grid gap-8 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
             {% for post in posts %}
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300">
+            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden hover:shadow-3xl hover:scale-105 transition-transform duration-300">
                 <!-- Imagen -->
                 <div class="flex-shrink-0">
                     {% with post.images.first as post_image %}
