--- a/blog/templates/components/commons/footer.html
+++ b/blog/templates/components/commons/footer.html
@@ -22,7 +22,7 @@
             <div class="w-full lg:w-1/3 xl:w-1/3 p-2">
                 <h5 class="text-lg text-[#203329] font-libertinus-bold mb-4">CONTACTO</h5>
                 <p class="text-[#445e35] font-libertinus-bold">Correo electrónico: <a href="mailto:info@example.com" class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl transition duration-300">info@example.com</a></p>
-                <h5 class="text-lg text-[#203329] font-libertinus-bold mt-4">ACERCA DE NOSOTROS</h5>
+                <a href="{% url 'about_us' %}" class="text-lg text-[#203329] font-libertinus-bold mt-4">ACERCA DE NOSOTROS</a>
             </div>
         </div>
         <div class="text-center mt-6">
