--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -65,7 +65,7 @@ Inicio
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="m-8 grid gap-8 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
             {% for post in posts %}
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 bg-white">
+            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden hover:shadow-2xl hover:scale-105 transition-transform duration-300 bg-white">
 
                 <div class="flex-shrink-0 h-48 bg-[#203329] flex items-center justify-center">
                     {% with post.images.all|first as post_image %}
