--- a/blog/templates/category/category_create.html
+++ b/blog/templates/category/category_create.html
@@ -7,9 +7,13 @@
     <form method="post">
         {% csrf_token %}
         <div class="mb-4">
-            <label for="name" class="block font-libertinus-regular text-[#445e35] mb-2">Nombre de la Categoría</label>
-            <input type="text" id="name" name="name" required
-                   class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#F6F2E6]"/>
+            <label for="title" class="block font-libertinus-regular text-[#445e35] mb-2">Nombre de la Categoría</label>
+            <input 
+                type="text" 
+                id="title" 
+                name="title" 
+                class="w-full border border-gray-300 rounded-md p-2"
+                placeholder="Ej. Bienestar, Meditación, Hábitos">
         </div>
 
         <div class="flex justify-center mt-6">
