--- a/blog/templates/layouts/general_layout.html
+++ b/blog/templates/layouts/general_layout.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/Base_layout.html' %}
+{% extends 'layouts/base_layout.html' %}
 {% load widget_tweaks %}
  
 {% block title_layout %}
