--- a/blog/templates/about_us.html
+++ b/blog/templates/about_us.html
@@ -17,7 +17,13 @@
            <div class="flex flex-col items-center">
              <img src="{% static 'Gerardo.png' %}" alt="Gerardo E. Montenegro" class="object-cover h-48 w-48 rounded-full shadow-md mb-4">
              <h3 class="text-xl text-[#203329] font-libertinus-bold mb-2">Gerardo Emanuel Montenegro</h3>
-             <p class="text-[#445e35] font-libertinus-italic mb-4">Breve descripción del miembro del equipo.</p>
+             <p class="text-[#445e35] font-libertinus-italic mb-4">
+              Backend<br>
+              Musico y Programador Junior.<br>
+              34 Años<br>
+
+
+             </p>
            </div>
            <div class="flex flex-col items-center">
              <img src="{% static 'cin.png' %}" alt="Cintia Bertoncini" class="object-cover h-48 w-48 rounded-full shadow-md mb-4">
