--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -17,9 +17,9 @@ Inicio
             <h1 class="text-4xl md:text-6xl font-tangerine text-white mt-10 max-w-5xl leading-tight">
                 Si no has encontrado tu Ikigai, su búsqueda ya constituye un propósito en sí mismo.
             </h1>
-            <div class="flex flex-wrap justify-center mt-50 gap-5">
-                <section class="max-w-7xl mx-auto px-4 sm:px-6 text-black text-shadow-lg lg:px-8 mt-12">
-                <form method="get" class="flex flex-col sm:flex-row gap-4 mb-8">
+            <div class="flex flex-wrap justify-center mt-40 gap-5">
+            <section class="max-w-7xl mx-auto px-4 sm:px-6 text-black text-shadow-lg lg:px-8">
+                <form method="get" class="flex flex-col sm:flex-row gap-4">
                     <div class="flex-1 bg-[#F6F2E6] bg-opacity-25 rounded-lg">
                         <input type="text" name="search_query" value="{{ request.GET.search_query }}"
                             placeholder="Buscar posts..." 
@@ -29,8 +29,6 @@ Inicio
                     <div class="flex-1 bg-[#F6F2E6] bg-opacity-25 rounded-lg">
                          {{ form.category|add_class:"w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#445e35]" }}
                     </div>
-
-
 
                     <div class="flex-1 bg-[#F6F2E6] bg-opacity-25 rounded-lg">
                         <select name="order_by" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#445e35]">
@@ -54,8 +52,7 @@ Inicio
                     {% endif %}
                 </form>
             </section>
-    
-    
+
             </div>
         </div>
     </section>
