--- a/blog/templates/user/user_profile.html
+++ b/blog/templates/user/user_profile.html
@@ -38,14 +38,10 @@ Perfil de {{ user.username }}
       </div>
     </div>
 
-    <div class="space-y-2">
-      <p><strong>Email:</strong> {{ user.email }}</p>
-      <p><strong>Es administrador:</strong> {{ user.is_admin|yesno:"Sí,No" }}</p>
-      <p><strong>Es colaborador:</strong> {{ user.is_collaborator|yesno:"Sí,No" }}</p>
-      <p><strong>Es registrado:</strong> {{ user.is_registered|yesno:"Sí,No" }}</p>
-    </div>
-
-    <div>
+        <div class="space-y-2">
+          <p><strong>Email:</strong> {{ user.email }}</p>
+          <p><strong>Rol:</strong> {{ role }}</p>
+        </div>
       <a href="{% url 'user:auth_logout' %}" class="inline-block bg-[#3F4F36] hover:bg-[#2f3c28] text-white font-semibold py-2 px-4 rounded-md transition duration-200">
         Cerrar sesión
       </a>
