--- a/blog/templates/post/post_detail.html
+++ b/blog/templates/post/post_detail.html
@@ -39,7 +39,7 @@
         </p>
 
         <!-- Autor al final del post -->
-        <p class="flex font-tangerine text-4xl text-[#19221d] justify-end">
+        <p class="flex font-libertinus-bold text-2xl text-[#19221d] justify-end">
             <strong>{{ object.author.username }}</strong>
         </p>
 
@@ -60,7 +60,7 @@
 
         <!-- Valoración -->
         <section class="shadow-md rounded-lg p-6 mt-8">
-            <h3 class="text-2xl font-semibold text-gray-900 mb-4">⭐ Valoración</h3>
+            <h3 class="text-2xl font-libertinus-regular text-gray-900 mb-4">⭐ Valoración</h3>
 
             <p class="text-lg text-gray-700 mb-4" id="average-rating-display">
                 {% if average_rating %}
