--- a/blog/templates/user/user_profile.html
+++ b/blog/templates/user/user_profile.html
@@ -1,13 +1,12 @@
 {% extends 'layouts/general_layout.html' %}
 {% load static %}
 
-
 {% block title %}
 Perfil de {{ user.username }}
 {% endblock title %}
 
 {% block content %}
-<div class="min-h-screen bg-[#F6F2E6] text-[#3F4F36] flex justify-center items-start py-12 px-4">
+<section class="min-h-screen bg-[#F6F2E6] text-[#3F4F36] flex flex-row gap-10 justify-center items-center py-12 px-4">
 
   <div class="bg-white rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
 
@@ -39,31 +38,28 @@ Perfil de {{ user.username }}
     </div>
 
     <div>
-    <a href="{% url 'user:auth_logout' %}" class="inline-block bg-[#3F4F36] hover:bg-[#2f3c28] text-white font-semibold py-2 px-4 rounded-md transition duration-200">
+     <a href="{% url 'user:auth_logout' %}" class="inline-block bg-[#3F4F36] hover:bg-[#2f3c28] text-white font-semibold py-2 px-4 rounded-md transition duration-200">
       Cerrar sesión
-    </a>
+     </a>
     </div>
-
-    <div class="mt-8">
-      <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">Mis Posts</h2>
-
-      {% if posts %}
-        <ul class="list-disc list-inside space-y-2 max-h-60 overflow-y-auto">
-          {% for post in posts %}
-            <li>
-              <a href="{% url 'post:post_detail' post.slug %}" class="text-[#3F4F36] hover:underline">
-                {{ post.title }}
-              </a>
-              <span class="text-sm text-gray-500">- {{ post.created_at|date:"d M Y" }}</span>
-            </li>
-          {% endfor %}
-        </ul>
-      {% else %}
-        <p>No has creado ningún post aún.</p>
-      {% endif %}
-    </div>
-
   </div>
+  
+  <div class="bg-white rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
+    <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">Mis Posts</h2>
 
-</div>
+    {% if posts %}
+      <ul class="list-disc list-inside space-y-2 max-h-60 overflow-y-auto">
+        {% for post in posts %}
+        <li><a href="{% url 'post:post_detail' post.slug %}" class="text-[#3F4F36] hover:underline">
+            {{ post.title }}
+            </a>
+            <span class="text-sm text-gray-500">- {{ post.created_at|date:"d M Y" }}</span>
+        </li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p>No has creado ningún post aún.</p>
+    {% endif %}
+  </div>
+</section>
 {% endblock content %}
