feat: Actualizando la descripción de mi perfil en la sección "Nuestro equipo"

--- a/blog/templates/about_us.html
+++ b/blog/templates/about_us.html
@@ -30,10 +30,13 @@
              <h3 class="text-xl text-[#203329] font-libertinus-bold mb-2">Cintia Romina Bertoncini</h3>
              <p class="text-[#445e35] font-libertinus-italic mb-4">Programadora front end, aspirante a full stack. Esposa y mamá de dos niñas.</p>
            </div>
+
+
+           
            <div class="flex flex-col items-center">
              <img src="{% static 'German.png' %}" alt="German Edgardo Delfino" class="object-cover h-48 w-48 rounded-full shadow-md mb-4">
              <h3 class="text-xl text-[#203329] font-libertinus-bold mb-2">German Edgardo Delfino</h3>
-             <p class="text-[#445e35] font-libertinus-italic mb-4">Breve descripción del miembro del equipo.</p>
+             <p class="text-[#445e35] font-libertinus-italic mb-4">Estudiante de programación/Diseño grafico digital/Tec. Administración.</p>
            </div>
         </div>
     </div>
