--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -7,6 +7,8 @@ Inicio
 {% endblock %}
 
 {% block content %}
+     <link rel="icon" href="{% static 'assets/favicon2.png' %}" type="image/x-icon" />
+
 <main class="mb-20">
     {% static 'assets/images/portada1.webp' as background_image %}
 
