--- a/blog/templates/user/user_profile.html
+++ b/blog/templates/user/user_profile.html
@@ -32,10 +32,10 @@ Perfil de {{ user.username }}
       </div>
     </div>
 
-        <div class="space-y-2">
-          <p><strong>Email:</strong> {{ user.email }}</p>
-          <p><strong>Rol:</strong> {{ role }}</p>
-        </div>
+    <div class="space-y-2">
+      <p><strong>Email:</strong> {{ user.email }}</p>
+      <p><strong>Rol:</strong> {% if user.is_staff %}Staff{% else %}Usuario{% endif %}</p>
+    </div>
 
     <div>
      <a href="{% url 'user:auth_logout' %}" class="inline-block bg-[#3F4F36] hover:bg-[#2f3c28] text-white font-semibold py-2 px-4 rounded-md transition duration-200">
@@ -43,7 +43,7 @@ Perfil de {{ user.username }}
      </a>
     </div>
   </div>
-  
+
   <div class="bg-[#F6F2E6] border border-slate-400 rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
     <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">Mis Posts</h2>
 
