--- a/blog/templates/post/post_detail.html
+++ b/blog/templates/post/post_detail.html
@@ -44,7 +44,7 @@
         </p>
 
         <!-- Botones de acción -->
-        {% if user == object.author or user.is_staff or user.is_admin  %}
+        {% if user == object.author or user.is_collaborator or user.is_admin  %}
             <div class="flex flex-wrap gap-3 mt-6 justify-start sm:justify-end">
                 <a href="{% url 'post:post_update' slug=object.slug %}" class="inline-flex items-center gap-2 bg-[#3F4F36] hover:bg-[#2f3c28] text-white font-semibold py-2 px-4 rounded-md transition duration-200">
                     ✏️ Editar
@@ -118,7 +118,7 @@
                             👍 <span class="likes-count">{{ comment.likes.count }}</span>
                         </button>
 
-                        {% if user == comment.author or user.is_staff or user.is_admin %}
+                        {% if user == comment.author or user.is_collaborator or user.is_admin %}
                             <button type="button"
                                     class="text-blue-600 hover:underline text-sm edit-toggle"
                                     data-id="{{ comment.id }}"
